--- a/bm-employee-service.properties
+++ b/bm-employee-service.properties
@@ -7,4 +7,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.application.name=bm-employee-service
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
-spring.boot.message= Hello employee service - updated2233
+spring.boot.message= Hello employee service
