--- a/bm-department-service.properties
+++ b/bm-department-service.properties
@@ -6,4 +6,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 eureka.client.eureka-server-u-r-l-context=http://localhost:8761/eureka/
-spring.boot.message=Hello department service2
+spring.boot.message=Hello department service
